# CodeAnalysis

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conan_toolchain.cmake  conanfile.txt  interface  main.cpp
.cache/clangd/index/: linuxTerminal.cpp.D8656B1110C1DF15.idx  linuxTerminal.hpp.65489698AF34E8BE.idx  main.cpp.154EDF2FC2A5925F.idx  mainWindow.cpp.2C9C547F69CBFD7A.idx  mainWindow.hpp.6C92D9FDE3B2F6D3.idx  (+2 more)
build-debug/: .ninja_deps  .ninja_log  BZip2-debug-x86_64-data.cmake  CMakeCache.txt  CMakePresets.json  FindEXPAT.cmake  FindFontconfig.cmake  FindFreetype.cmake  Fontconfig-Target-debug.cmake  Fontconfig-debug-x86_64-data.cmake  FontconfigConfig.cmake  FontconfigConfigVersion.cmake  PNG-debug-x86_64-data.cmake  ZLIB-debug-x86_64-data.cmake  brotli-debug-x86_64-data.cmake  build.ninja  cmake_install.cmake  compile_commands.json  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-debug-x86_64.sh  conandeps_legacy.cmake  conanrun.sh  conanrunenv-debug-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  expat-config-version.cmake  expat-config.cmake  fltk-Target-debug.cmake  fltk-config-version.cmake  fltk-config.cmake  fltk-debug-x86_64-data.cmake  freetype-config-version.cmake  freetype-config.cmake  freetype-debug-x86_64-data.cmake  glu-debug-x86_64-data.cmake  module-EXPAT-debug-x86_64-data.cmake  module-Fontconfig-Target-debug.cmake  module-Fontconfig-debug-x86_64-data.cmake  module-Freetype-debug-x86_64-data.cmake  (+5 more)
include/: checkBox.AST.hpp  commandBuilderASan.hpp  commandBuilderCT.hpp  commandBuilderCppCheck.hpp  linuxTerminal.hpp  mainWindow.hpp  tipTree.hpp  tipTreeASan.hpp  tipTreeCppCheck.hpp  widgetData.hpp
src/: checkBoxAST.cpp  commandBuilderASan.cpp  commandBuilderCT.cpp  commandBuilderCppCheck.cpp  linuxTerminal.cpp  mainWindow.cpp  tipTree.cpp  tipTreeASan.cpp  tipTreeCppCheck.cpp  widgetData.cpp
testCode/: memoryLeak.cpp  ruleOfThree.cpp  useAfterFree.cpp
testCode/bufferOverflow/: CMakeLists.txt  bufferOverflow.cpp
testCode/memoryLeak/: CMakeLists.txt
testCode/nullDeferef/: CMakeLists.txt  nullDeferef.cpp
testCode/ruleOfThree/: CMakeLists.txt
testCode/suspicious/: CMakeLists.txt  suspicious.cpp
testCode/unitialized/: CMakeLists.txt  uninitialized.cpp
testCode/useAfterFree/: CMakeLists.txt
